# protocol-core

./: .gitignore  .gitmodules  Cargo.toml  Makefile  NOTICE  README.md  setup_local.sh
.github/backup/: release-validator.backup
.github/workflows/: _deploy-owen-template.yml  _release-template.yml  build-owen.yml  deploy-owen-lambda-dev.yml  deploy-owen-lambda-stage.yml  deploy-validator-infra.yml  publish-contracts.yml  publish-hardhat.yml  publish-typechain.yml  release-owen.yml  release-validator.yml  validator-rebuild-test.yml
aws-queue-consumer/: Cargo.toml  README.md
aws-queue-consumer/src/: event_handler.rs  lib.rs  main.rs
aws/aws_queue_consumer/: Cargo.toml
aws/blobs_batch_sender/: Cargo.toml
aws/blobs_batch_sender/src/: contract.rs  event_handler.rs  lib.rs  main.rs  s3.rs  secrets.rs
aws/owen-infra/: Makefile  README.md  template-config-dev.json  template-config-prod.json  template-config-stage.json  template.yml
aws/validator-infra/: Makefile  instance-config.sh  rebuild-and-run.sh  rebuild.sh  run-validator.sh  template-config.json  template.yml  validator.env
aws_queue_consumer/src/: event_handler.rs  lib.rs
blob_codec/: Cargo.toml
blob_codec/src/: constants.rs  decoder.rs  encoder.rs  errors.rs  lib.rs
blob_codec/tests/: integration_test.rs
blob_codec/tests/assets/: msg_one.json  msg_two.json
contracts/: .env.example  .gitignore  foundry.toml  hardhat.config.ts  package-lock.json  package.json
contracts/.openzeppelin/: holesky.json  sepolia.json  unknown-100.json  unknown-10200.json  unknown-3151908.json
contracts/contracts/: AssetRegistry.sol  DdexEmitter.sol  DdexSequencer.sol  DdexSequencer22.sol  ImageID.sol  StakeVault.sol  Verifier.sol
data-provider-isrc/: networks.json  package-lock.json  package.json  schema.graphql  subgraph.yaml
ddex_parser/: Cargo.toml  README.md
ddex_parser/resources/example_messages/: 1Audio.xml  lite_schema.xml
ddex_parser/resources/xml_schema/flattened/: schema.xsd
ddex_parser/resources/xml_schema/original-no-descriptions/: schema.xsd
ddex_parser/src/: errors.rs  schema.rs
ddex_parser/tests/: validation.rs
ddex_parser/validation_generator/: package.json  regex_validation_debug.json
host/: Cargo.toml
host/res/: 1Audio_lite.json
host/src/: main.rs
ipfs_copy_worker/: .gitignore  Cargo.toml  RevelatorProd-CIDS-reduced.txt  docker-compose.yml
ipfs_copy_worker/src/: cid.rs  constants.rs  database.rs  files.rs  ipfs_gateway.rs  lib.rs  main.rs  upload.rs
local_setup/: .gitignore  README.md
log_macros/: Cargo.toml
log_macros/src/: lib.rs
ow-registry-subgraph/: package-lock.json
ow_blob_codec/: .gitignore  Cargo.toml
ow_data_provider_cli/: README.md
ow_validator_node/: Cargo.toml
ow_wallet/: Cargo.toml
owen/: .env.example  .env.local  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  bundle.sh  mount-s3.sh  owen.sh
owen/aws/: HOW_TO_USE_SCRIPTS.md  Makefile  README.md  auth.sh  build-amazon-linux.sh  py_deploy.sh  s3.json  template.json  trigger.sh
owen/aws/deploy-infra/: Makefile  README.md  build-aws-queue-consumer.sh  template-config-dev.json  template-config-stage.json  template-config.json  template-test.yml  template.yml
owen/aws/lambda/: process_ddex_message_from_s3_to_owen
owen/aws/lambda/sendDdexToSQS/: README.md  lambda_function.py
owen/src/: blob.rs  blobs_queue.rs  constants.rs  contracts.rs  ddex_sequencer.rs  errors.rs  image_processor.rs  ipfs.rs  lib.rs  logger.rs  main.rs  output_generator.rs  s3_message_storage.rs  wallet.rs
owen/src/aws-lambda/: entrypoint.rs  main.rs  message_queue.rs  message_storage.rs  secrets.rs
owen/src/local-s3/: config.rs  main.rs  message_database.rs
owen/tests/: msg_one.json
owen/tests/msg_four/: 2024-12-05T16-05-17.xml
owen/tests/msg_one/: 2024-12-05T15-27-31.xml
owen/tests/msg_three/: 2024-12-05T17-40-47.xml
owen/tests/msg_two/: 2024-12-05T16-01-45.xml  ERN2.xml
parser/: Cargo.toml  README.md
parser/ddex_schema/: Cargo.toml  TODO.md
parser/ddex_schema/src/: deserializer.rs  errors.rs  lib.rs  protocol.rs  schema.rs  validation.rs
parser/ddex_schema/tests/: choice.rs  schema.rs  template.json  validation.rs
parser/subgraph_schema/: Cargo.toml
parser/subgraph_schema/src/: lib.rs  schema.rs
polynomial_evaluation/: Cargo.toml  README.md
prover/: .env  Cargo.toml  build.rs
prover/core/: Cargo.toml
prover/core/src/: lib.rs
prover/guest/: Cargo.toml
prover/guest/src/: main.rs
prover/host/: Cargo.toml
prover/host/src/: main.rs
prover/interface/: Cargo.toml
prover/interface/src/: lib.rs
prover/methods/: Cargo.toml
prover/methods/guest/: Cargo.toml
prover/methods/guest/src/: main.rs
prover/res/: 0Audio.json  0Audio_lite.json  0Audio_lite.xml
prover/shared/: Cargo.toml
prover/src/: current_ddex_guest  ddex_guest  lib.rs  main.rs  previous_ddex_guest
proverr/: Cargo.toml  README.md  build.rs
registry-statistics-subgraph/: package-lock.json  package.json  schema.graphql  subgraph.yaml
registry-subgraph/: networks.json  package-lock.json  package.json  schema.graphql  subgraph.yaml
validator_node/: .env.local  .env.template  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  bee-config.yaml.template
validator_node/aws/: Makefile  template-config.json  template.yml
validator_node/setup/: install.sh
validator_node/src/: beacon_chain.rs  bee.rs  blob_proofs.rs  constants.rs  contracts.rs  ddex_sequencer.rs  ipfs.rs  lib.rs  main.rs  prover_wrapper.rs  telemetry.rs  zip.rs
validator_node/src/blob_assignment/: files.rs  manager.rs
validator_node/tests/: prover.rs  prover_playground.rs
validator_node/tests/e2e_setup/: .env.template  build.sh  dev_mode_proving_network.yml  kill.sh  launch-owen.sh  launch-validator.sh  run.sh
validator_node/tests/resources/: 2024-12-05T15-45-38.xml
validator_node/tests/resources/mixed/: valid.json
validator_node/tests/resources/playground/: 2024-12-05T21-35-15.xml
validator_node/tests/resources/rejected/: rejected1.json  rejected2.json  rejected3.json
validator_node/tests/resources/valid/: valid2.json
(+190 files in other folders)
