[workspace]
resolver = "2"
members = [
    "aws_queue_consumer",
    "blob_codec",
    "ddex_parser",
    "log_macros",
    "owen",
    "prover",
    "validator_node",
]

[workspace.dependencies]
log_macros = { path = "./log_macros" }
blob_codec = { path = "./blob_codec" }
ddex_parser = { path = "./ddex_parser" }
prover = { path = "./prover" }
log = "0.4.25"
thiserror = "2"
serde = { version = "1.0.217" }
serde_valid = "0.25.0"
serde_json = "1.0.138"
reqwest = "0.12.8"
dotenvy = "0.15.7"
tokio = "1.40.0"
anyhow = "1.0.95"
sentry = "0.36.0"
sentry-log = "0.36"
pretty_env_logger = "0.5.0"


[profile.dev]
opt-level = 3
