[workspace]
resolver = "2"
members = [
    "aws/aws_queue_consumer",
    "aws/blobs_batch_sender",
    "blob_codec",
    "ddex_parser",
    "log_macros",
    "owen",
    "prover",
    "validator_node",
]

[workspace.dependencies]
log_macros = { path = "./log_macros" }
blob_codec = { path = "./blob_codec" }
ddex_parser = { path = "./ddex_parser" }
prover = { path = "./prover" }
owen = { path = "./owen" }
log = "0.4.27"
thiserror = "2.0.12"
serde = "1.0.219"
serde_valid = "1.0.5"
serde_json = "1.0.141"
reqwest = "0.12.22"
dotenvy = "0.15.7"
tokio = "1.46.1"
anyhow = "1.0.98"
sentry = "0.41.0"
sentry-log = "0.41.0"
pretty_env_logger = "0.5.0"
once_cell = "1.21.3"

[profile.dev]
opt-level = 3

[workspace.metadata.release]
allow-branch = ["master"]
shared-version = false
consolidate-commits = false
publish = false
tag = true
push = true
tag-name = "{{crate_name}}@{{version}}"
tag-message = "{{crate_name}}@{{version}}"
pre-release-commit-message = "Release {{crate_name}}@{{version}}"
