[package]
name = "blob_codec"
version = "0.1.3"
edition = "2021"
description = "Utility tools for working with KZG Blobs"
license = "MIT"

[dependencies]
miniz_oxide = "0.8.9"
sha2 = { git = "https://github.com/risc0/RustCrypto-hashes", rev = "244dc3b08788f7a4ccce14c66896ae3b4f24c166" }
thiserror = { workspace = true }
log_macros = { workspace = true }

[dev-dependencies]
c-kzg = "2.1.1"
serde_json = { workspace = true }
