[package]
name = "blob_codec"
version = "0.1.3"
edition = "2021"
description = "Utility tools for working with KZG Blobs"
license = "MIT"

[dependencies]
miniz_oxide = "0.8.9"
sha2 = { git = "https://github.com/risc0/RustCrypto-hashes", rev = "244dc3b08788f7a4ccce14c66896ae3b4f24c166" }
thiserror = { workspace = true }
log_macros = { workspace = true }
prover = { workspace = true }
ddex_parser = { workspace = true }
infer = "0.19.0"
serde_valid = { workspace = true }
alloy-sol-types = "1.3.0"
alloy-primitives = "1.3.0"

[dev-dependencies]
c-kzg = "2.1.1"
serde_json = { workspace = true }
