[package]
name = "ddex_parser"
version = "0.1.0"
authors = ["Daniel Cybulka <daniel.cybulka@rumblefish.com>"]
edition = "2021"

[dependencies]
yaserde = { version = "0.12.0", features = ["derive"] }
xml-rs = "0.8.20"
regex = "1.10.6"
serde = { workspace = true, features = ["derive"] }
serde_valid = { workspace = true }
thiserror = { workspace = true }
log_macros = { workspace = true }
once_cell = "1.20.3"

[dev-dependencies]
serde_json = { workspace = true }
rand = "0.8.5"
