[package]
name = "ddex_parser"
version = "0.1.0"
authors = ["Daniel Cybulka <daniel.cybulka@rumblefish.com>"]
edition = "2021"

[dependencies]
yaserde = { version = "0.12.0", features = ["derive"] }
xml-rs = "0.8.27"
regex = "1.11.1"
serde = { workspace = true, features = ["derive"] }
serde_valid = { workspace = true }
thiserror = { workspace = true }
log_macros = { workspace = true }
once_cell = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
rand = "0.9.2"
