[package]
name = "ipfs_copy_worker"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
aws-config = "1.8.10"
aws-sdk-s3 = "1.112.0"
bytes = "1.11.0"
dotenvy = "0.15.7"
futures-util = "0.3.31"
multihash = "0.19.3"
reqwest = { version = "0.12.24", default-features = false, features = [
    "rustls-tls",
    "stream",
    "multipart",
    "json",
] }
rusqlite = { version = "0.37.0", features = ["bundled"] }
serde = "1.0.228"
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["full"] }
tokio-util = "0.7.17"
walkdir = "2.5.0"
zip = "6.0.0"
