[package]
name = "owen_cli"
version = "0.2.1"
edition = "2021"
default-run = "main"

[dependencies]
reqwest = { version = "0.12.8", features = ["stream", "multipart", "json"] }
alloy = { version = "0.3.6", features = ["full"] }
c-kzg = "1.0.3"
dotenvy = "0.15.7"
blob_codec = { path = "../blob_codec" }
tokio = { version = "1.40.0", features = ["full"] }
tokio-util = "0.7.12"
serde = "1.0.210"
infer = "0.16.0"
ddex_parser = { path = "../ddex_parser" }
serde_valid = "0.25.0"
serde_json = "1.0.133"
anyhow = "1.0.95"
log = "0.4.25"
log_macros = { path = "../log_macros" }
sentry = "0.36.0"
sentry-log = "0.36"
pretty_env_logger = "0.5.0"
prover = { path = "../prover" }
# owen build for AWS Lambda:
aws_lambda_events = { version = "0.15.1", default-features = false, features = [
    "cloudwatch_events",
], optional = true }
lambda_runtime = { version = "0.13.0", optional = true }
aws-config = { version = "1.5.16", features = [
    "behavior-version-latest",
], optional = true }
aws-sdk-dynamodb = { version = "1.64.0", optional = true }
aws-sdk-s3 = { version = "1.74.0", optional = true }
aws-sdk-secretsmanager = { version = "1.62.0", optional = true }

[features]
aws-integration = [
    "dep:aws_lambda_events",
    "dep:lambda_runtime",
    "dep:aws-config",
    "dep:aws-sdk-dynamodb",
    "dep:aws-sdk-s3",
    "dep:aws-sdk-secretsmanager",
]

[[bin]]
name = "main"
path = "src/main.rs"

[[bin]]
name = "owen_lambda"
path = "src/aws-lambda/entrypoint.rs"
required-features = ["aws-integration"]
