[package]
name = "owen"
version = "0.2.12"
edition = "2021"
default-run = "owen"

[dependencies]
reqwest = { workspace = true, features = ["stream", "multipart", "json"] }
alloy = { version = "0.3.6", features = ["full"] }
c-kzg = "1.0.3"
dotenvy = { workspace = true }
blob_codec = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tokio-util = "0.7.12"
serde = { workspace = true}
infer = "0.16.0"
ddex_parser = { workspace = true }
serde_valid = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true}
log_macros = { workspace = true }
sentry = { workspace = true }
sentry-log = { workspace = true }
pretty_env_logger = { workspace = true }
prover = { workspace = true }
# owen build for AWS Lambda:
aws_lambda_events = { version = "0.15.1", default-features = false, features = [
    "cloudwatch_events",
], optional = true }
lambda_runtime = { version = "0.13.0", optional = true }
aws-config = { version = "1.5.16", features = [
    "behavior-version-latest",
], optional = true }
aws-sdk-dynamodb = { version = "1.64.0", optional = true }
aws-sdk-s3 = { version = "1.74.0", optional = true }
aws-sdk-secretsmanager = { version = "1.62.0", optional = true }
ravif = "0.11.11"
image = "0.25.5"
rgb = "0.8"

[features]
aws-integration = [
    "dep:aws_lambda_events",
    "dep:lambda_runtime",
    "dep:aws-config",
    "dep:aws-sdk-dynamodb",
    "dep:aws-sdk-s3",
    "dep:aws-sdk-secretsmanager",
]

[[bin]]
name = "owen"
path = "src/main.rs"

[[bin]]
name = "owen_lambda"
path = "src/aws-lambda/entrypoint.rs"
required-features = ["aws-integration"]
