[package]
name = "owen"
version = "0.2.33"
edition = "2021"
default-run = "owen"

[dependencies]
reqwest = { workspace = true, features = ["stream", "multipart", "json"] }
alloy = { version = "1.0.32", features = ["full"] }
c-kzg = "2.1.1"
dotenvy = { workspace = true }
blob_codec = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tokio-util = "0.7.15"
serde = { workspace = true }
infer = "0.19.0"
ddex_parser = { workspace = true }
serde_valid = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true }
log_macros = { workspace = true }
sentry = { workspace = true }
sentry-log = { workspace = true }
pretty_env_logger = { workspace = true }
prover = { workspace = true }
ravif = "0.12.0"
image = "0.25.6"
rgb = "0.8.52"
once_cell = { workspace = true }
aws-config = { version = "1.8.2", features = ["behavior-version-latest"] }
aws-sdk-kms = "1.79.0"
alloy-signer-aws = "1.0.32"

aws_lambda_events = { version = "0.17.0", default-features = false, features = [
    "cloudwatch_events",
], optional = true }
lambda_runtime = { version = "0.14.3", optional = true }
aws-sdk-dynamodb = { version = "1.84.0", optional = true }
aws-sdk-s3 = { version = "1.98.0", optional = true }
aws-sdk-secretsmanager = { version = "1.80.0", optional = true }
rusqlite = { version = "0.37.0", optional = true, features = ["bundled"] }


[features]
aws-integration = [
    "dep:aws_lambda_events",
    "dep:lambda_runtime",
    "dep:aws-sdk-dynamodb",
    "dep:aws-sdk-s3",
    "dep:aws-sdk-secretsmanager",
]

local-s3 = ["dep:aws-sdk-s3", "dep:rusqlite"]

[[bin]]
name = "owen"
path = "src/main.rs"

[[bin]]
name = "owen_lambda"
path = "src/aws-lambda/main.rs"
required-features = ["aws-integration"]


[[bin]]
name = "owen_local_s3"
path = "src/local-s3/main.rs"
required-features = ["local-s3"]
