[package]
name = "prover"
version = "0.1.0"
edition = "2021"

[dependencies]
methods = { path = "methods" }
shared = { path = "shared" }
risc0-zkvm = { version = "1.1.2" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = "1.0"
ddex_schema = { path = '../parser/ddex_schema' }
env_logger = "0.11.5"
blob_codec = { path = '../blob_codec' }
risc0-ethereum-contracts = { git = "https://github.com/risc0/risc0-ethereum", tag = "v1.1.4" }
# alloy-primitives = { version = "=0.8.5", default-features = false, features = [
#     "rlp",
#     "serde",
#     "std",
# ] }

[features]
cuda = ["risc0-zkvm/cuda"]
default = []
metal = ["risc0-zkvm/metal"]
prove = ["risc0-zkvm/prove"]
