[package]
name = "validator_node"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy = { version = "0.3.0", features = ["full"] }
dotenvy = "0.15.7"
futures-util = "0.3.30"
blob_codec = { path = "../blob_codec" }
reqwest = "0.12.7"
serde = { version = "1.0.210", features = ["derive"] }
sha2 = "0.10.8"
tokio = { version = "1.39.3", features = ["full"] }
prover = { path = "../prover" }
risc0-zkvm = { version = "1.1.2" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
ddex_schema = { path = '../parser/ddex_schema' }
env_logger = "0.11.5"
risc0-ethereum-contracts = { git = "https://github.com/risc0/risc0-ethereum", tag = "v1.1.4" }
alloy-sol-types = "0.8.18"

[features]
cuda = ["risc0-zkvm/cuda"]
default = []
metal = ["risc0-zkvm/metal"]
prove = ["risc0-zkvm/prove"]
