[package]
name = "validator_node"
version = "0.1.3"
edition = "2021"

[dependencies]
alloy = { version = "1.0.22", features = ["full"] }
dotenvy = { workspace = true }
futures-util = "0.3.31"
blob_codec = { workspace = true }
reqwest = { workspace = true, features = ["multipart"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
sha2 = "0.10.8"
tokio = { workspace = true, features = ["full"] }
prover = { workspace = true }
risc0-zkvm = { version = "2.3.1" }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
ddex_parser = { workspace = true }
risc0-ethereum-contracts = { git = "https://github.com/risc0/risc0-ethereum", tag = "v2.2.2" }
alloy-sol-types = "1.3.0"
anyhow = { workspace = true }
log = { workspace = true }
log_macros = { workspace = true }
sentry = { workspace = true }
sentry-log = { workspace = true }
pretty_env_logger = { workspace = true }
hex = "0.4.3"
# rand = "0.8"
# secp256k1 = { version = "0.30", features = ["rand"] }
# tiny-keccak = "2.0.2"
# regex = "1.11.1" 
serde_valid = { workspace = true }
cid = "0.11.1"
multihash-codetable = { version = "0.1.4", default-features = false, features = [
    "sha2",
] }
once_cell = { workspace = true }
zip = "3.0.0"
walkdir = "2.5.0"

[features]
cuda = ["risc0-zkvm/cuda"]
default = []
metal = ["risc0-zkvm/metal"]
prove = ["risc0-zkvm/prove"]
