[package]
name = "aws_queue_consumer"
version = "0.1.0"
edition = "2021"

[dependencies]
aws-config = { version = "1.5.16", features = ["behavior-version-latest"] }
aws-sdk-dynamodb = "1.64.0"
aws_lambda_events = { version = "0.15.1", default-features = false, features = [
    "sqs",
] }
chrono = "0.4.39"
lambda_runtime = "0.13.0"
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
