[package]
name = "subgraph_schema"
version = "0.1.0"
authors = ["Daniel Cybulka <daniel.cybulka@rumblefish.com>"]
edition = "2021"

[dependencies]
ddex_schema = { path = "../ddex_schema" }
regex = "1.10.6"
serde = {version = "1.0.0", features = ["derive"]}

[dev-dependencies]
serde_json = "1.0.134"
