[package]
name = "ddex_guest"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
risc0-zkvm = { version = "2.0.2", default-features = false, features = ['std'] }
prover_interface = { path = "../interface" }
ddex_parser = { path = "../../ddex_parser" }
blob_codec = { path = "../../blob_codec" }
alloy-sol-types = "0.8.18"
anyhow = "1.0.95"
