[package]
name = "ddex_guest"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
risc0-zkvm = { version = "2.3.1", default-features = false, features = ['std'] }
prover_interface = { path = "../interface" }
ddex_parser = { path = "../../ddex_parser" }
blob_codec = { path = "../../blob_codec" }
alloy-sol-types = "1.3.0"
anyhow = "1.0.98"
