[package]
name = "host"
version = "0.1.0"
edition = "2021"

[dependencies]
methods = { path = "../methods" }
core = { path = "../core" }
risc0-zkvm = { version = "1.0.4" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = "1.0"
ddex_schema = {path = '../../parser/ddex_schema'}
serde_json = "1.0"

[features]
cuda = ["risc0-zkvm/cuda"]
default = []
metal = ["risc0-zkvm/metal"]
prove = ["risc0-zkvm/prove"]